refactor the rules for tablet and responsive

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </ul>
         </nav>
     </header>
-    <!-- <span class="separation"></span>
-   decriptionTitle-->
+     <span class="separation"></span>
+   <!--decriptionTitle-->
     <section class="descriptionTitle">
         <h1> Trouver votre hébergement pour des vacanes de reve </h1>
         <p> En plein centre ville ou en pleine nature</p>
