restore image files

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="parent_box">
                     <div class="box">
                         <figure>
-                            <img src="images/compress/3Compress.jpg" alt="marcus-loke">
+                            <img src="images/compress/big5.jpg" alt="marcus-loke">
                             <figcaption>
                                 <h3>Auberge la Cannebiere</h3>
                                 <p>Nuit à partir de 25<strong>&#8364;</strong></p>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="box">
                         <figure>
-                            <img src="images/compress/5Compress.jpg" alt="photo_fred-kleber">
+                            <img src="images/compress/big4.jpg" alt="photo_fred-kleber">
                             <figcaption>
                                 <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de 52<strong>&#8364;</strong></p>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="box">
                         <figure>
-                            <img src="images/compress/1Compress.jpg" alt="marcus-loke">
+                            <img src="images/compress/big1.jpg" alt="marcus-loke">
                             <figcaption>
                                 <h3>
                                     Hôtel Les mouettes</h3>
@@ -135,7 +135,7 @@
                 <div class="parent_box">
                     <div class="box">
                         <figure>
-                            <img src="images/compress/10Compress.jpg" alt="photo_annie-spratt">
+                            <img src="images/compress/big6.jpg" alt="photo_annie-spratt">
                             <figcaption>
                                 <h3>
                                     Hôtel de la mer</h3>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="box">
                         <figure>
-                            <img src="images/compress/2Compress.jpg" alt="photo_nicate-lee">
+                            <img src="images/compress/big2.jpg" alt="photo_nicate-lee">
                             <figcaption>
                                 <h3>Auberge Le Panier</h3>
                                 <p>Nuit à partir de 23<strong>&#8364;</strong></p>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="box">
                         <figure>
-                            <img src="images/compress/7Compress.jpg" alt="photo_fred-kleber">
+                            <img src="images/compress/big3.jpg" alt="photo_fred-kleber">
                             <figcaption>
                                 <h3>
                                     Hôtel chez Amina</h3>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="popularBox">
                     <figure>
-                        <img src="images/compress/8Compress.jpg" alt="photo_emile-guillemot">
+                        <img src="images/compress/small3.jpg" alt="photo_emile-guillemot">
                         <figcaption>
                             <h3>
                                 Hôtel Le soleil du matin</h3>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="popularBox">
                     <figure>
-                        <img src="images/compress/9Compress.jpg" alt="photo_reisetopia-B8WIgxA">
+                        <img src="images/compress/small1.jpg" alt="photo_reisetopia-B8WIgxA">
                         <figcaption>
                             <h3>Au coeur de l'eau chambres d'
                                 Hôtel</h3>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="popularBox">
                     <figure>
-                        <img src="images/compress/6Compress.jpg" alt="photo_emile-guillemot">
+                        <img src="images/compress/small1.jpg" alt="photo_emile-guillemot">
                         <figcaption>
                             <h3>Hôtel Tout bleu et blanc</h3>
                             <p>Nuit à partir de 128<strong>&#8364;</strong></p>
@@ -252,7 +252,7 @@
         <div class="activitesContainer">
             <div class="Boxbig">
                 <figure>
-                    <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="reno-laithienne">
+                    <img src="images/compress/activity/activitybig1.jpg" alt="reno-laithienne">
                     <figcaption>
                         <h4>Vieux Port</h4>
                     </figcaption>
@@ -261,7 +261,7 @@
             <div class="rowPhoto">
                 <div class="boxSmall" id="FortdePomegues">
                     <figure>
-                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="marcus-loke">
+                        <img src="images/compress/activity/activitysmall4.jpg" alt="marcus-loke">
                         <figcaption>
                             <h4>Fort de Pomégues</h4>
                         </figcaption>
@@ -270,7 +270,7 @@
                 </div>
                 <div class="boxSmall" id="ileDuFriout">
                     <figure>
-                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="marcus-loke">
+                        <img src="images/compress/activity/activitysmall2.jpg" alt="marcus-loke">
                         <figcaption>
                             <h4>iles du Friout</h4>
                         </figcaption>
@@ -279,8 +279,7 @@
             </div>
             <div class="Boxbig">
                 <figure>
-                    <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                        alt="reno-laithienne">
+                    <img src="images/compress/activity/activitybig2.jpg"  alt="reno-laithienne">
                     <figcaption>
                         <h4>Parc National des Calanques</h4>
                     </figcaption>
@@ -289,7 +288,7 @@
             <div class="rowPhoto">
                 <div class="boxSmall">
                     <figure>
-                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="marcus-loke">
+                        <img src="images/compress/activity/activitysmall1.jpg" alt="marcus-loke">
                         <figcaption>
                             <h4>Notre-Dame-de_la-Garde</h4>
                         </figcaption>
@@ -297,7 +296,7 @@
                 </div>
                 <div class="boxSmall" id="lastSmall">
                     <figure>
-                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="marcus-loke">
+                        <img src="images/compress/activity/activitysmall3.jpg" alt="marcus-loke">
                         <figcaption>
                             <h4>Parc longchamp</h4>
                         </figcaption>
