adjusted performance and accessibility

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </ul>
         </nav>
     </header>
-     <span class="separation"></span>
-   <!--decriptionTitle-->
+    <span class="separation"></span>
+    <!--decriptionTitle-->
     <section class="descriptionTitle">
         <h1> Trouver votre hébergement pour des vacanes de reve </h1>
         <p> En plein centre ville ou en pleine nature</p>
@@ -252,7 +252,7 @@
         <div class="activitesContainer">
             <div class="Boxbig">
                 <figure>
-                    <img src="images/compress/activity/activitybig1.jpg" alt="reno-laithienne">
+                    <img src="images/compress/activity/big1.jpg" alt="reno-laithienne">
                     <figcaption>
                         <h4>Vieux Port</h4>
                     </figcaption>
@@ -266,9 +266,8 @@
                             <h4>Fort de Pomégues</h4>
                         </figcaption>
                     </figure>
-
                 </div>
-                <div class="boxSmall" id="ileDuFriout">
+                <div class="boxSmall" id="DuFriout">
                     <figure>
                         <img src="images/compress/activity/activitysmall2.jpg" alt="marcus-loke">
                         <figcaption>
@@ -279,7 +278,7 @@
             </div>
             <div class="Boxbig">
                 <figure>
-                    <img src="images/compress/activity/activitybig2.jpg"  alt="reno-laithienne">
+                    <img src="images/compress/activity/big2.jpg" alt="reno-laithienne">
                     <figcaption>
                         <h4>Parc National des Calanques</h4>
                     </figcaption>
