make site responsive on four screen type

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="description" content="Site Réservia, création du site réservia du projet2 web dev de openclassroom">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link href="./css/portrait_media.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet"> 
+    <link href="./css/media.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
-            <!--- Nav--> 
+            <!--- Nav-->
+            <div class="headContainer">
             <nav> 
                 <img src="images/logo/Reservia.svg" alt="Logo Reservia">
                 <ul>                         
@@ -22,6 +23,7 @@
                     <li><a href="#" class="sincrire">S'inscrire</a></li>
                 </ul>
             </nav>
+        </div> 
         </header>
          <!--decriptionTitle-->
     <section class="descriptionTitle">
@@ -41,7 +43,7 @@
     </section>
     <!--Filter Container--> 
     <section class="filterContainer">
-        <h2  aria-label="filter">Filtres</h2>
+        <h2  >Filtres</h2>
         <div class="firtsBtn">
             <div class="liBtn" role="button">
                 <i class="fas fa-money-bill-wave"></i>
@@ -82,15 +84,16 @@
                             <figcaption class="captionHeberhement">
                                 <h3>Auberge la Cannebiere</h3>
                                 <p>Nuit à partir de 25<strong>&#8364;</strong></p>
-                                <ul class="startBox">
-                                    <li><i class="fas fa-star"></i></li>
-                                    <li><i class="fas fa-star"></i></li>
-                                    <li><i class="fas fa-star"></i></li>
-                                    <li><i class="fas fa-star"></i></li>
-                                    <li class="unCheckStart"><i class="fas fa-star"></i></li>
-                                </ul>
+                             <ul class="startBox">
+                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star"></i></li>
+                            <li class="unCheckStart"><i class="fas fa-star"></i></li>
+                        </ul>
                             </figcaption>
-                        </figure>
+                        </figure> 
+                        
                     </div>
                     <div class="box">
                         <figure>
@@ -270,7 +273,7 @@
                 </div>
             </div>
         </div>
-        <div class="separationDiv" id="secondSeparation">
+        <div  id="secondSeparation">
             <div class="Boxbig" id="secondbigphoto">
                 <figure>
                     <div class="activityImg" id="activityImg4"></div>
@@ -284,7 +287,7 @@
                     <figure>
                         <div class="activitySmImg" id="activityImg5"></div>
                         <figcaption>
-                            <h4>Notre-Dame-de_la-Garde</h4>
+                            <h4>Notre-Dame-de-la-Garde</h4>
                         </figcaption>
                     </figure>
                 </div>
@@ -300,6 +303,7 @@
         </div>
         </div>
     </section>
+    </div>
     <!--Footer-->
     <footer>
         <div class="card">
